Proyectos/Proyecto2/k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
  namespace: so1-proyecto2-202112145
spec:
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
      - name: mongo-db
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
  namespace: so1-proyecto2-202112145
spec:
  type: LoadBalancer
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo-db
