Proyectos/Proyecto2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: so1-proyecto2-ingress
  namespace: so1-proyecto2-202112145
spec:
  ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grpc-client-service
                port:
                  number: 3000
            path: /grpc
          - pathType: Prefix
            backend:
              service:
                name: wasm-client-service
                port:
                  number: 8080
            path: /wasm
